# mtasa-module-sdk

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  compose-test.sh  docker-compose.yml  save-binary.sh
include/ModuleSdk/: Exception.h  LuaArgument.h  LuaArgumentType.h  LuaObject.h  LuaVmExtended.h  README.md
lib/MtaLua/: CMakeLists.txt
lib/MtaLua/include/MtaLua/: ILuaModuleManager.h  lualib.h  utils.h
lib/MtaLua/include/lua/: ILuaModuleManager.h  LuaImports.h  lauxlib.h  lua.h  luaconf.h
lib/MtaLua/src/: LuaImports.cpp
src/: Exception.cpp  LuaArgument.cpp  LuaObject.cpp  LuaVmExtended.cpp  test.cpp
tests/: functions.cpp  functions.h  main.cpp  run-tests.sh
tests/environment/: Dockerfile  run-tests.sh
tests/environment/deathmatch/: .gitignore
tests/environment/deathmatch/resources/test/: core.lua  moduleTest.lua
tests/mtasa_server/mods/deathmatch/: mtaserver.conf
tests/mtasa_server/mods/deathmatch/resources/test/: core.lua  meta.xml  moduleTest.lua
